--- a/views/pages/about-me.ejs
+++ b/views/pages/about-me.ejs
@@ -3,31 +3,21 @@
 
 <div id="main" class="site-main">
 
-    <!-- .featured-top -->
     <div class="featured-top">
             
         <img src="template/images/blog/02.jpg">
         
-        <!-- .post-thumbnail -->
         <div class="post-thumbnail" style="background-image:url(template/images/blog/cover_background.jpg)">
                                   
-            <!-- .entry-header -->
             <header class="entry-header">
                 
-                <!-- .entry-title -->
                 <h1 class="entry-title">About Me</h1>
                 
             </header>
-            <!-- .entry-header -->
             
         </div>
-        <!-- .post-thumbnail -->
         
     </div>
-    <!-- .featured-top -->
-    
-    <!-- InstanceEndEditable -->
-  
      
     <div class="layout-fixed"> 
         <div id="primary" class="content-area">
@@ -35,10 +25,6 @@
             <!-- site-content -->
             <div id="content" class="site-content" role="main">
             
-                            
-                <!-- InstanceBeginEditable name="PageContent" -->
-                
-                
                 <!-- .hentry -->
                 <article class="hentry page">   
                     
@@ -47,44 +33,27 @@
                         
                         <h4>Xin chào! Mình là Đạt đây ^^</h4>
 
-                        <p>Mình là một ITBA và hiện đang làm việc cho Công ty Mservice. Trước đây mình là một fullstack developer, nhưng vì muốn hiểu hơn nhiều khía cạnh trong con người mình và một phần cũng muốn thử thách nên mình quyết định rẽ sang nghề BA.</p>
+                        <p>Mình là một con Kim Ngưu 1999, hiện là một ITBA và đang làm việc cho Công ty Mservice Q.7 TP.HCM. Trước đây mình là một fullstack developer, nhưng vì mình cảm giác được con người mình vẫn thích "nói chuyện" hơn và nhất là nói chuyện về kỹ thuật nên mình quyết định rẽ sang nghề BA.</p>
 
                         <p>Đây là website của mình do chính mình code. Mục đích nhằm chia sẻ các câu chuyện trong cuộc sống của mình cũng như chia sẻ các kiến thức bổ ích về lập trình và BA mà mình tích lũy được</p>
                         
-                        <p>Câu nói mình rất thích là: "Nhưng điều đơn giản đôi khi là những điều tốt nhất"</p>
+                        <p>Có một câu nói mình rất thích là: "Chỉ cần thành công đúng một lần". Yep! Chỉ cần 1 lần thôi, về mặt ý nghĩa nó cũng giống như câu "Có công mài sắt có ngày nên kim" vậy, nhưng nó lại có tác động cực lớn đến mình lúc mình bị chán nản, muốn bỏ cuộc khi làm việc gì đó thất bại nhiều lần.</p>
+
+                        <p>Còn bạn thì sao? Hy vọng bạn sẽ có trải nghiệm tốt khi ghé blog của mình nhé 😊</p>
                         
-                        <h4>Liên hệ tôi qua:</h4>
+                        <h4>Liên hệ mình qua:</h4>
                         
                         <p>
                             <a class="social-link facebook" href="https://www.facebook.com/TOTHANHDAT.TTD/"></a>
                             <a class="social-link linkedin" href="https://www.linkedin.com/in/tothanhdat/"></a>
                             <a class="social-link github" href="https://github.com/tothanhdat"></a>
                             <a class="social-link instagram" href="https://www.instagram.com/tothanhdat.it/"></a>
-                            <a class="social-link youtube" href="https://www.youtube.com/channel/UCPbRmdnWs6PeW5tFQMBcGng"></a>
                         </p>
-                        
-                        
                     </div>
-                    <!-- .entry-content -->
-                    
-                    
                 </article>
-                <!-- .hentry -->
-                
-                    
-                
-                <!-- InstanceEndEditable -->
-                
-                
             </div>
-            <!-- site-content -->
-    
         </div>
-        <!-- primary -->    
-    
     </div>
-    <!-- layout -->
-
 </div>
 
 <%- include ('./footer.ejs') %>
