update meta tag fb

--- a/views/pages/footer.ejs
+++ b/views/pages/footer.ejs
@@ -25,7 +25,7 @@
                     </h1>
                     <!-- site-title -->
                     
-                    <p class="site-description">just living the life as it goes by</p>
+                    <p class="site-description">only need to be successful once</p>
                 
                 </div>
                 <!-- site-title-wrap -->
