--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -9,7 +9,14 @@
     <meta name="description" content="Impose - Responsive HTML5 Template">
     <meta name="keywords" content="personal, blog, html5">
     <meta name="author" content="Pixelwars">
-    <title>Impose - for bloggers</title>
+
+    <meta property="og:url"                content="https://tothanhdat.online/" />
+    <meta property="og:type"               content="article" />
+    <meta property="og:title"              content="Blog của Đạt" />
+    <meta property="og:description"        content="Chúc bạn có trải nghiệm vui vẻ 😊" />
+    <meta property="og:image"              content="https://tothanhdat.online/template/images/site/avatar_main_square.jpg" />
+    
+    <title>Blog của Đạt</title>
     
     <!-- FAV and TOUCH ICONS -->
     <link rel="shortcut icon" href="/template/images/ico/favicon.ico">
