--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -77,9 +77,9 @@
                             
                              <!-- .post-tags -->
                              <div class="post-tags tagcloud">
-                                <a href="#" rel="tag">travel</a>
-                                <a href="#" rel="tag">earth</a>
-                                <a href="#" rel="tag">think</a>
+                                <a href="#" rel="tag">ITBA</a>
+                                <a href="#" rel="tag">laptrinh</a>
+                                <a href="#" rel="tag">blog</a>
                              </div>
                              <!-- .post-tags -->
                             
