--- a/views/pages/list-post.ejs
+++ b/views/pages/list-post.ejs
@@ -63,23 +63,8 @@
                   </ul>
               </nav>
               <!-- post pagination -->
-              
-              
-              
-              
-              
-                  
-              
-              
-              
-              
           </div>
-          <!-- site-content -->
-  
       </div>
-      <!-- primary -->    
-  
-      <!-- #secondary -->
       <div id="secondary" class="widget-area sidebar" role="complementary">
       
           <!-- widget : text -->
@@ -87,7 +72,8 @@
             <h3 class="widget-title">About Me</h3>
             <div class="textwidget">
               <p><img src="/template/images/site/avatar_main_square.jpg" alt="avatar"></p>
-              <p>Xin chào! Mình là Đạt đây, hiện tại mình là một ITBA. Đây là website của mình nhằm chia sẻ các câu chuyện trong cuộc sống cũng như chia sẻ các kiến thức bổ ích về lập trình và BA</p>
+              <p>Xin chào! Mình là Đạt đây, hiện tại mình là một ITBA. </p>
+              <p>Đây là blog nhằm chia sẻ các câu chuyện trong cuộc sống của mình cũng như chia sẻ các kiến thức bổ ích về lập trình và BA mà mình tích lũy được.</p>
             </div>
           </aside>
           <!-- widget : text -->
