--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -6,8 +6,9 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Impose - Responsive HTML5 Template">
-    <meta name="keywords" content="personal, blog, html5">
+    <meta name="title" content="Blog của Đạt">
+    <meta name="description" content="Chúc bạn có trải nghiệm vui vẻ nhé!!">
+    <meta name="keywords" content="blog itba, itba, blog lap trinh">
     <meta name="author" content="Pixelwars">
 
     <meta property="og:url"                content="https://tothanhdat.online/" />
