--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -1,70 +1,5 @@
 <% moment.locale('vi')%>
-<!doctype html>
-
-<html lang="en" class="minimal-style is-menu-fixed is-always-fixed is-selection-shareable blog-animated header-light header-small" data-effect="slideUp"><!-- InstanceBegin template="/Templates/layout.dwt" codeOutsideHTMLIsLocked="true" -->
-
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <meta name="title" content="Blog của Đạt">
-    <meta name="description" content="Chúc bạn có trải nghiệm vui vẻ nhé!!">
-    <meta name="keywords" content="blog itba, itba, blog lap trinh">
-    <meta name="author" content="Pixelwars"> -->
-
-    <!-- <meta property="og:url"                content="https://tothanhdat.online/" />
-    <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="Blog của Đạt" />
-    <meta property="og:description"        content="Chúc bạn có trải nghiệm vui vẻ 😊" />
-    <meta property="og:image"              content="https://tothanhdat.online/template/images/site/avatar_main_square.jpg" /> -->
-    
-    <title>Blog của Đạt</title>
-    
-    <!-- FAV and TOUCH ICONS -->
-    <link rel="shortcut icon" href="/template/images/ico/favicon.ico">
-    <link rel="apple-touch-icon" href="/template/images/ico/apple-touch-icon.png">
-    
-    <!-- FONTS -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Sans:400,400i,700,700i|Poppins:300,400,500,600,700" rel="stylesheet">
-    
-    <!-- STYLES -->
-    <link rel="stylesheet" type="text/css" href="/template/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/template/css/fonts/fontello/css/fontello.css">
-    <link rel="stylesheet" type="text/css" href="/template/js/jquery.magnific-popup/magnific-popup.css">
-    <link rel="stylesheet" type="text/css" href="/template/js/jquery.fluidbox/fluidbox.css">
-    <link rel="stylesheet" type="text/css" href="/template/js/owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" type="text/css" href="/template/js/selection-sharer/selection-sharer.css">
-    <link rel="stylesheet" type="text/css" href="/template/css/rotate-words.css">
-    <link rel="stylesheet" type="text/css" href="/template/css/align.css">
-    <link rel="stylesheet" type="text/css" href="/template/css/main.css">
-    <link rel="stylesheet" type="text/css" href="/template/js/shortcodes/shortcodes.css">
-    <link rel="stylesheet" type="text/css" href="/template/css/768.css">
-    <link rel="stylesheet" type="text/css" href="/template/css/992.css">
-    
-    
-    <!-- InstanceBeginEditable name="head" -->
-    <!-- InstanceEndEditable -->
-    
-        
-    
-    <!-- InstanceParam name="PostSlider" type="boolean" value="false" -->
-    <!-- InstanceParam name="Sidebar" type="boolean" value="false" -->
-    <!-- InstanceParam name="PageDefault" type="boolean" value="true" -->
-    <!-- InstanceParam name="PageFixed" type="boolean" value="false" -->
-    <!-- InstanceParam name="PageFull" type="boolean" value="false" -->
-    <!-- InstanceParam name="SliderItems" type="number" value="3" -->
-    <!-- InstanceParam name="SliderNav" type="boolean" value="true" -->
-    <!-- InstanceParam name="SliderDots" type="boolean" value="false" -->
-    <!-- InstanceParam name="HeaderLight" type="boolean" value="true" -->
-    <!-- InstanceParam name="HeaderSmall" type="boolean" value="true" -->
-    <!-- InstanceParam name="SinglePost" type="boolean" value="false" -->
-    <!-- InstanceParam name="SinglePage" type="boolean" value="false" -->
-    <!-- InstanceParam name="CategoryPage" type="boolean" value="false" -->
-    
-	<!-- INITIAL SCRIPTS -->
-	<script src="/template/js/modernizr.min.js"></script>
-
-</head>
+<%- include ('./header.ejs') %>
 
 <body class="">
 
@@ -296,7 +231,7 @@
                 let infoBlog = resp.data;
                 console.log({ infoBlog });
                 if(!resp.error){
-                    $("head").prepend(`<meta property="og:url"content="https://tothanhdat.online/blog/${blogID}"/><meta property="og:type"content="article" /><meta property="og:title"content="${infoBlog.title}" /><meta property="og:description"content="Chúc bạn có trải nghiệm vui vẻ 😊" /><meta property="og:image"content="${infoBlog.image}"/>`);
+                    //$("head").append(`<meta property="og:url"content="https://tothanhdat.online/blog/${blogID}"/><meta property="og:type"content="article" /><meta property="og:title"content="${}" /><meta property="og:description"content="Chúc bạn có trải nghiệm vui vẻ 😊" /><meta property="og:image"content="https://tothanhdat.online/template/images/site/avatar_main_square.jpg"/>`);
                     $('.content-ckeditor').append(infoBlog.content)
                 }else{
                     return toastr['error']('Thêm thất bại', 'Thông báo');
