--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -6,17 +6,19 @@
 <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="title" content="Blog của Đạt">
-    <meta name="description" content="Chúc bạn có trải nghiệm vui vẻ nhé!!">
-    <meta name="keywords" content="blog itba, itba, blog lap trinh">
-    <meta name="author" content="Pixelwars">
 
     <meta property="og:url"                content="https://tothanhdat.online/" />
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="<%=infoBlog.title %>" />
     <meta property="og:description"        content="<%=infoBlog.content %>" />
     <meta property="og:image"              content="<%=infoBlog.image %>" />
+    
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="title" content="Blog của Đạt">
+    <meta name="description" content="Chúc bạn có trải nghiệm vui vẻ nhé!!">
+    <meta name="author" content="Pixelwars"> -->
+
+    <meta name="keywords" content="blog itba, itba, blog lap trinh">
     
     <title><%=infoBlog.title%></title>
     
