--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -10,7 +10,7 @@
     <meta property="og:url"                content="https://tothanhdat.online/" />
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="<%=infoBlog.title %>" />
-    <meta property="og:description"        content="<%=infoBlog.content %>" />
+    <meta property="og:description"        content="Chúc bạn có trải nghiệm vui vẻ!" />
     <meta property="og:image"              content="<%=infoBlog.image %>" />
     
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1">
