update meta tag fb

--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -7,7 +7,7 @@
 
     <meta charset="utf-8">
 
-    <meta property="og:url"                content="https://tothanhdat.online/" />
+    <meta property="og:url"                content="https://tothanhdat.online/blog/<%=infoBlog._id%> " />
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="<%=infoBlog.title %>" />
     <meta property="og:description"        content="Chúc bạn có trải nghiệm vui vẻ!" />
