--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -13,12 +13,11 @@
     <meta property="og:description"        content="Chúc bạn có trải nghiệm vui vẻ!" />
     <meta property="og:image"              content="<%=infoBlog.image %>" />
     
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="title" content="Blog của Đạt">
     <meta name="description" content="Chúc bạn có trải nghiệm vui vẻ nhé!!">
-    <meta name="author" content="Pixelwars"> -->
 
-    <meta name="keywords" content="blog itba, itba, blog lap trinh">
+    <meta name="keywords" content="blog itba, itba, blog lap trinh, tothanhdat, itba sharing, itba momo, deploy nodejs matbao, deploy nodejs mongodb">
     
     <title><%=infoBlog.title%></title>
     
