--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,3 +1,4 @@
+<% moment.locale('vi')%>
 <%- include ('./header.ejs') %>
         <!-- site-main -->
         <div id="main" class="site-main">
@@ -33,36 +34,68 @@
                                     
                          </article> 
                                  
-                       <h3 class="widget-title home-title">Bài viết gần đây</h3>  
-                         
-                       <div class="blog-simple">
-                            <% listBlog && listBlog.length && listBlog.slice(0, 5).forEach(blog => { %>
-                             
-                            <article class="hentry post has-post-thumbnail">
-                                <div class="hentry-left">
-                                    <div class="entry-date">
-                                        <span class="day"><%=blog.createAt.getDate() %> </span>
-                                        <span class="month"><%=blog.createAt.getMonth() + 1 %></span>
-                                        <span class="year"><%=blog.createAt.getYear()%></span>
-                                    </div>
-                                    <div class="featured-image" style="background-image:url(<%=blog.image%>)"></div>
-                                </div>
-                                <div class="hentry-middle">
-                                    <h2 class="entry-title"><a href="/blog/<%=blog._id %> "><%=blog.title%> </a></h2>
-                            
-                                </div>
-                                <a class="post-link" href="/blog/<%=blog._id %> "><%=blog.title%> </a>
-                                
-                            </article>
-
-                            <% }) %>
-                            
-                       </div> 
-                      
-                      <div class="home-launch">
-                        <a class="button" href="/category">Xem tất cả</a>
-                      </div> 
+                       <h3 style="color: rgb(95, 95, 95); font-size: 15px;" class="widget-title home-title">Bài viết gần đây</h3>  
                         
+                        <div class="media-grid-wrap">
+                            <div class="masonry blog-masonry blog-stream tablet-view" data-layout="masonry" data-mobile-item-width="220" data-item-width="420" style="width: 697.469px; position: relative; height: 1235.16px;">       
+                                <% listBlog && listBlog.length && listBlog.slice(0, 6).forEach(blog => { %>
+                                <article class="hentry post has-post-thumbnail slideUp" style="position: absolute; left: 0px; top: 0px; width: 49.8947%; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
+                                    <!-- .featured-image -->
+                                    <div class="featured-image">
+                                        <a href="/blog/<%=blog._id %>"><img style="flex-shrink: 0; min-width: 100%; max-height: 240px; object-fit: cover;" width="1440" height="1440" src="<%=blog.image%>" alt="blog-image"></a>
+                                    </div>
+                                    
+                                    <header class="entry-header">
+                                        
+                                        <!-- .entry-title -->
+                                        <h2 class="entry-title"><a href="/blog/<%=blog._id %>"><%=blog.title%></a></h2>
+                                        
+                                        
+                                        <!-- .entry-meta -->
+                                        <div class="entry-meta">
+                                            <span class="cat-links">
+                                                <a href="#" title="View all posts in Adventure" rel="category tag">
+                                                    <% CATEGORY.forEach(category => { %>
+                                                        <% if (category.id == blog.category) { %>
+                                                              <%=category.title%> 
+                                                        <% } %>
+                                                    <% }) %>
+                                                </a>
+                                            </span>	
+                                            <span class="entry-date">
+                                                <time class="entry-date" datetime=""><%=moment(blog.createAt).format('L'); %></time>
+                                            </span>    
+                                            <span>
+                                                <a href="/blog/<%=blog._id %>"><%=blog.views%> Lượt xem</a>
+                                            </span>
+                                        </div>
+                                        <!-- .entry-meta -->
+                                        
+                                        
+                                    </header>
+                                    <!-- .entry-header -->
+                                    
+                                    <!-- .entry-content -->
+                                    <div class="entry-content">
+                                                                        
+                                        <p>All I've got to do is pass as an ordinary human being. Simple. What could possibly go wrong? Stop talking, brain thinking. Hush. I hate yogurt. It's just stuff with bits in. I'm nobody's taxi..
+                                            <span class="more">
+                                                <a href="blog-single.html" class="more-link">Read More</a>
+                                            </span>
+                                        </p>
+                                    
+                                    </div>
+                                    <!-- .entry-content -->
+                                    
+                                    
+                                </article>
+                                <% }) %>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="margin-top: 10px;" class="home-launch">
+                        <a class="button" href="/category">Xem tất cả</a>
+                    </div> 
                     </div>
                 </div>
             </div>
